@@ -1,8 +1,7 @@
-// Copyright 2008, 2010, 2016, 2017, 2018, 2022 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2008, 2010, 2016, 2017, 2018, 2022, 2026 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.commands.pirep;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.sql.Connection;
 
 import org.deltava.beans.flight.*;
@@ -13,7 +12,7 @@ import org.deltava.dao.*;
 /**
  * A Web Site Command to display a Pilot's log book in a Calendar. 
  * @author Luke
- * @version 10.3
+ * @version 12.5
  * @since 2.2
  */
 
@@ -43,7 +42,7 @@ public class LogCalendarCommand extends AbstractCalendarCommand {
             
             // Get the flight reports
             GetFlightReports prdao = new GetFlightReports(con);
-            Collection<FlightReport> pireps = prdao.getLogbookCalendar(id, ctx.getDB(), cctx.getStartTime(), cctx.getDays()).stream().filter(fr -> (fr.getStatus() != FlightStatus.DRAFT)).collect(Collectors.toList());
+            Collection<FlightReport> pireps = prdao.getLogbookCalendar(id, ctx.getDB(), cctx.getStartTime(), cctx.getDays()).stream().filter(fr -> (fr.getStatus() != FlightStatus.DRAFT)).toList();
             prdao.getCaptEQType(pireps);
 			ctx.setAttribute("pireps", pireps, REQUEST);
 		} catch (DAOException de) {
