@@ -1,7 +1,5 @@
-// Copyright 2005, 2006, 2007, 2008, 2010, 2015, 2016, 2021, 2023 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2005, 2006, 2007, 2008, 2010, 2015, 2016, 2021, 2023, 2026 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.commands.stats;
-
-import java.util.stream.Collectors;
 
 import org.deltava.beans.stats.*;
 
@@ -12,7 +10,7 @@ import org.deltava.util.*;
 /**
  * A Web Site Command to display sorted Flight Report statistics.
  * @author Luke
- * @version 11.0
+ * @version 12.5
  * @since 1.0
  */
 
@@ -50,7 +48,7 @@ public class FlightStatsCommand extends AbstractViewCommand {
 		}
 		
 		// Save sort data
-		ctx.setAttribute("statSortData", vc.getResults().stream().map(JSONUtils::format).collect(Collectors.toList()), REQUEST);
+		ctx.setAttribute("statSortData", vc.getResults().stream().map(JSONUtils::format).toList(), REQUEST);
 
 		// Set the result page and return
 		CommandResult result = ctx.getResult();
